# Voxel_Engine

./: .gitignore  Cargo.toml  README.md  Voxel Engine.md  dragon.vox
src/: main.rs
src/app/: app.rs  egui.rs  frame_timer.rs  input.rs  mod.rs  player.rs  world.rs
src/core/: cpu_side_svo.rs  game.rs  mod.rs  settings.rs  types.rs
src/gpu/: ComputeShader.wgsl  ComputeShader2.wgsl  FragmentShader.wgsl  mod.rs  pipelines.rs  resources.rs  types.rs  wgpu_ctx.rs
src/util/: timer.rs
